2008-09-03  Sancho Lerena <slerena@artica.es>

	* include/functions_reporting_pdf.php: Moved to contrib branch.

	* install.php: Update sample of use for homeurl variable. This should
	not contain HTTP:/x.x.x.x anymore.

	* operation/events/events_rss.php: Makes use of homeurl in the 
	correct way.

	* operation/agentes/estado_agente.php: Fixed a sprintf typo.

2008-09-03  Esteban Sanchez  <estebans@artica.es>

	* include/config_process.php: Checks in homeurl config variable. Style
	corrections.

	* include/help/en/help_date_format.php: Points to oficial PHP manual
	on php.net.

	* godmode/agentes/modificar_agente.php: Escape quotes which was
	causing SQL errors.

	* godmode/reporting/map_builder.php: Fixed divs and tables widths.

	* include/functions.php, operation/agentes/datos_agente.php: Style
	corrections.

	* include/functions_db.php: Style corrections. Added comments for
	translators.

	* operation/extensions.php: Added login checking.

	* operation/reporting/reporting_viewer.php: Minor bug that was causing
	javascript failures.

	* operation/users/user.php: Use print_help_tip() to show contextual
	help.

2008-09-02  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* reporting/fgraph.php: SQL passed wasn't being processed, so the graph
	was off for grafico_eventos_group. Updated that and the whole
	function. Simplified, it runs very fast now (practically no delay).
	Updated graph_event_module as well.

	* operation/events/events.php: Description wasn't being added to the
	audit log when deleting multiple items. Fixed

	* include/functions_reporting.php: Minor fix for uninitialized array

2008-09-02  Esteban Sanchez  <estebans@artica.es>

	* include/functions.php: Style correction.

	* general/footer.php: Fixed link to Firefox and make it
	translatable.

2008-09-02  Sancho Lerena <slerena@gmail.com>

	* functions.php: Added function to clean SQL string.

	* setup/news.php: Fixed problem adding new news.

	* setup/link.php: Added mysql recheck to input var.
